# fhc

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  builder.sh  fhc.1
.github/workflows/: make-release.yml
files/: hosts.txt
src/: args.rs  httplib.rs  lib.rs  main.rs  structs.rs  utils.rs
