[package]
name = "fhc"
version = "0.8.1"
authors = ["Eduard Tolosa <edu4rdshl@protonmail.com>"]
edition = "2018"
description = "Fast HTTP Checker."
repository = "https://github.com/edu4rdshl/fhc"
license = "GPL-3.0-or-later"
keywords = ["http", "https", "http-checker"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.0", features = ["full", "io-util"] }
futures = "0.3.31"
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", features = [
    "hickory-dns",
    "rustls-tls",
    "native-tls",
] }
openssl = { version = "0.10.68", features = ["vendored"] }
rand = "0.8.5"
scraper = "0.20.0"
async-recursion = "1.1.1"

[profile.release]
lto = 'thin'
codegen-units = 1
panic = 'abort'
incremental = false
opt-level = "s"
