[package]
name = "fhc"
version = "0.8.3"
authors = ["Eduard Tolosa <edu4rdshl@protonmail.com>"]
edition = "2018"
description = "Fast HTTP Checker."
repository = "https://github.com/edu4rdshl/fhc"
license = "GPL-3.0-or-later"
keywords = ["http", "https", "http-checker"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47.0", features = ["full", "io-util"] }
futures = "0.3.31"
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12.22", features = [
    "hickory-dns",
    "rustls-tls",
    "native-tls",
] }
openssl = { version = "0.10.73", features = ["vendored"] }
rand = "0.9.2"
scraper = "0.23.1"
async-recursion = "1.1.1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
